<resources>
    <string name="app_name">Czech Trainer</string>

    <!-- Login signup strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Смахните для регистрации</string>
    <string name="login_email">E-mail или Логин</string>
    <string name="password">Пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="tag">Самое время потренировать свой чешский</string>
    <string name="swipe_right_for_login">Смахните для входа</string>
    <string name="register">Зарегистрироваться</string>
    <string name="re_type_password">Повторите пароль</string>
    <string name="user_name">Имя</string>
    <string name="user_surname">Фамилия</string>
    <string name="login">Логин</string>
    <string name="log_in">Войти</string>

    <!-- Navigation strings -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_quiz">Упражнения</string>
    <string name="title_words">Словарь</string>
    <string name="title_profile">Профиль</string>
    <string name="questionStatocText">Выберите правильный перевод слова</string>
    <string name="nextWord">Следующее слово</string>

    <!-- Words page -->
    <string name="tableCzWordCol">Чешское слово</string>
    <string name="tableNoCol">№</string>
    <string name="tableRuWordCol">Русское слово</string>
    <string name="tablePartOfSpeechCol">Часть речи</string>
    <string name="tableGenderCol">Род</string>
    <string name="tableFormCol">Число</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="role">Роль</string>
    <string name="logout">Выйти</string>

</resources>